DigicielFull/force-app/main/default/objects/amc__Rate_Adjustment__c/amc__Rate_Adjustment__c.object-meta.xml
<CustomObject>
    <description>Identifies the Unique Reference for this Rate Adjustment</description>
    <label>Rate Adjustment</label>
    <nameField>
        <displayFormat>RADJ:{000000}</displayFormat>
        <label>Rate Adjustment ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Rate Adjustments</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>