DigicielFull/force-app/main/default/objects/amc__Rate_Adjustment__c/fields/amc__Cost_Hourly_Rate__c.field-meta.xml
<CustomField>
    <fullName>amc__Cost_Hourly_Rate__c</fullName>
    <inlineHelpText>Identifies the Cost Hourly Rate used for this Rate Adjustment</inlineHelpText>
    <label>Cost Hourly Rate</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Currency</type>
</CustomField>