DigicielFull/force-app/main/default/objects/amc__Rate_Adjustment__c/fields/amc__Rate_Card_Entry__c.field-meta.xml
<CustomField>
    <fullName>amc__Rate_Card_Entry__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Identifies the Rate Card Entry this Rate Adjustment relates to</inlineHelpText>
    <label>Rate Card Entry</label>
    <referenceTo>amc__Rate_Card_Entry__c</referenceTo>
    <relationshipLabel>Rate Adjustments</relationshipLabel>
    <relationshipName>Rate_Adjustments</relationshipName>
    <type>Lookup</type>
</CustomField>