DigicielFull/force-app/main/default/objects/amc__Rate_Adjustment__c/fields/amc__Rate_Type__c.field-meta.xml
<CustomField>
    <fullName>amc__Rate_Type__c</fullName>
    <inlineHelpText>Identifies the type of Billing &amp; Cost Rate method this Rate Adjustment will be applied to</inlineHelpText>
    <label>Rate Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Standard</fullName>
            </value>
            <value>
                <fullName>Role-based</fullName>
            </value>
            <value>
                <fullName>Role-based Override</fullName>
            </value>
            <value>
                <fullName>Skill-based</fullName>
            </value>
            <value>
                <fullName>Skill-based Override</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>