DigicielFull/force-app/main/default/objects/amc__Rate_Adjustment__c/fields/amc__Skill__c.field-meta.xml
<CustomField>
    <fullName>amc__Skill__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Identifies the Skill this Rate Adjustment relates to</inlineHelpText>
    <label>Skill</label>
    <referenceTo>amc__Skill__c</referenceTo>
    <relationshipLabel>Rate Adjustments</relationshipLabel>
    <relationshipName>Rate_Adjustments</relationshipName>
    <type>Lookup</type>
</CustomField>