DigicielFull/force-app/main/default/objects/amc__Rate_Adjustment__c/validationRules/amc__Ensure_Correct_Fields_on_Rate_Card.validationRule-meta.xml
<ValidationRule>
    <fullName>amc__Ensure_Correct_Fields_on_Rate_Card</fullName>
    <active>true</active>
    <description>Ensures Rate Card is not Blank if Rate Type = Rate Card</description>
    <errorConditionFormula>AND(
ISPICKVAL(amc__Rate_Type__c, &quot;Rate Card&quot;),
OR(
  ISBLANK(amc__Rate_Card_Entry__c), 
  NOT(ISBLANK(amc__Role__c)), 
  NOT(ISBLANK(amc__Project__c)),
  NOT(ISBLANK(amc__Skill__c))
))</errorConditionFormula>
    <errorMessage>Rate Card Entry must contain a value, Role, Project, and Skill must be empty.</errorMessage>
</ValidationRule>