DigicielFull/force-app/main/default/objects/amc__Rate_Adjustment__c/validationRules/amc__Ensure_Correct_Fields_on_Role_Rate.validationRule-meta.xml
<ValidationRule>
    <fullName>amc__Ensure_Correct_Fields_on_Role_Rate</fullName>
    <active>true</active>
    <description>Ensures Role is not Blank if Rate Type = Role-based</description>
    <errorConditionFormula>AND(
 ISPICKVAL(amc__Rate_Type__c, &quot;Role-based&quot;), 
 OR(
  ISBLANK(amc__Role__c), 
  NOT(ISBLANK(amc__Project__c)), 
  NOT(ISBLANK(amc__Skill__c)),
  NOT(ISBLANK(amc__Rate_Card_Entry__c))
 )
)</errorConditionFormula>
    <errorMessage>Role must contain a value, Project, Skill and Rate Card Entry must be empty</errorMessage>
</ValidationRule>