DigicielFull/force-app/main/default/objects/amc__Rate_Adjustment__c/validationRules/amc__Ensure_Correct_Fields_on_Skill_Override.validationRule-meta.xml
<ValidationRule>
    <fullName>amc__Ensure_Correct_Fields_on_Skill_Override</fullName>
    <active>true</active>
    <description>Ensures Skill, Role and Project are not Blank if Rate Type = Skill-based Override</description>
    <errorConditionFormula>AND(
 ISPICKVAL(amc__Rate_Type__c, &quot;Skill-based Override&quot;), 
 OR(
  ISBLANK(amc__Project__c), 
  ISBLANK(amc__Skill__c), 
  ISBLANK(amc__Role__c)),
  NOT(ISBLANK(amc__Rate_Card_Entry__c))
)</errorConditionFormula>
    <errorMessage>Skill, Project and Role must contain a value, Rate Card Entry must be empty</errorMessage>
</ValidationRule>