DigicielFull/force-app/main/default/objects/amc__Rate_Adjustment__c/validationRules/amc__Ensure_Correct_Fields_on_Standard_Rate.validationRule-meta.xml
<ValidationRule>
    <fullName>amc__Ensure_Correct_Fields_on_Standard_Rate</fullName>
    <active>true</active>
    <description>Ensures Role and Skill are Blank if Project Rate Type is Standard</description>
    <errorConditionFormula>AND(
 ISPICKVAL(amc__Rate_Type__c, &quot;Standard&quot;), 
 OR(
  ISBLANK(amc__Project__c), 
  NOT(ISBLANK(amc__Role__c)), 
  NOT(ISBLANK(amc__Skill__c)),
  NOT(ISBLANK(amc__Rate_Card_Entry__c))
 )
)</errorConditionFormula>
    <errorMessage>Project must contain a value, Role, Skill and Rate Card Entry must be empty</errorMessage>
</ValidationRule>